@@ -13,6 +13,7 @@ Date: ??????
     - Changed the way notes are saved. Existing notes will get destroyed or lost.
     - Sort Inventory now uses sort_and_merge inventory method.
   Bugfixes:
+    - Fix small logic bug in lib.
     - Allow specifying train horn.
     - Include changelog in release. #68
     - Reverse rotating saved dollies is now possible. Factorio Bug.
